improve mmc pack updater